# mini-cli

./: Makefile  Makefile.am  Makefile.in  README.md  README.rst  cli_demo.c  cli_demo.h  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
demo/: .cli_kmod_demo.o.cmd  cli_demo.c  cli_demo.h  cli_kmod_demo.c
demo/module/: Makefile
src/: cli_auth.c  cli_builtin_cmd.c  cli_cmd.c  cli_console.c  cli_error.c  cli_history.c  cli_history_item.c  cli_main.c  cli_node.c  cli_parser.c  cli_readline.c  cli_server.c  cli_shell.c  cli_telnet.c  cli_tty.c  cli_utils.c  cli_vector.c
src/inc/: cli_api.h  cli_auth.h  cli_cmd.h  cli_error.h  cli_history.h  cli_history_item.h  cli_node.h  cli_parser.h  cli_readline.h  cli_server.h  cli_shell.h  cli_tty.h  cli_utils.h  cli_vector.h
src/kmod/inc/: cli_cmn.h  cli_kmod_msg.h
src/kmod/kernel/: .cli_kmod_kern.o.cmd  Makefile  cli_kmod_kern.c  cli_kmod_kern.h
src/kmod/user/: cli_kmod_user.c
